--- a/plugins/plugin.spec.yaml
+++ b/plugins/plugin.spec.yaml
@@ -81,18 +81,19 @@ types:
     destinationCount:
       type: integer
       description: Total number of destinations in a destination list.
-      required: false
+      required: true
     domainCount:
       type: integer
       description: Total number of domains in a destination list. Domains are part of total destinations in a destination lists.
-      required: false
+      required: true
     urlCount:
       type: integer
       description: Total number of Urls in a destination list. Urls are part of total destinations in a destination lists.
-      required: false
+      required: true
     ipv4Count:
       type: integer
       description: Total number of Ip's in a destination list. Ip's are part of total destinations in a destination lists.
+      required: true
   destinations:
     destination:
       type: string
@@ -109,9 +110,9 @@ types:
 
 actions:
 #TODO
-  destinationLists:
-    title: Destination Lists Lookup
-    description: Retrieve all destination lists of organization
+  get_destinationLists_forOrg:
+    title: Destination List lookup for org ID
+    description: Retrieve all destination lists of selected organization.
     input:
       organizationId:
         title: Organization Destination List Lookup
@@ -120,43 +121,34 @@ actions:
         required: true
     output:
 #      TODO - Map sample response to output field
-#      TODO = Is required, required?
-      id:
-        title: Id
-        description: Unique ID
-        type: integer
+#      TODO - Is required, required?
+      orgDestinationList:
+        title: Organisation Destination List
+        description: #TODO Fill in later
+        type: '[]model'
+        #TODO Are these supposed to be seperate or together??
+      meta:
+        title: Meta data
+        description: metadata for output
+        type: '[]meta'
+  create_destinationList:
+    title: Create a destination list
+    description: POST request to create a new destination list
+    input:
       organizationId:
-        title: Org Id
-        description: Unique organization ID
+        title: Organization Destination List Lookup
+        description: Organization to lookup
         type: integer
-      access:
-        title: Access
-        description: String value for is access allowed
-        type: string
-      isGlobal:
-        title: isGlobal
-        description: ??? #TODO
-        type: boolean
-      name:
-        
-#      {
-#        "id": 1234567,
-#        "organizationId": 2345678,
-#        "access": "allow",
-#        "isGlobal": true,
-#        "name": "Global Allow List",
-#        "thirdpartyCategoryId": 0,
-#        "createdAt": 1490206249,
-#        "modifiedAt": 1520476127,
-#        "isMspDefault": false,
-#        "markedForDeletion": false,
-#        "meta": {
-#          "destinationCount": 5,
-#          "domainCount": 5,
-#          "urlCount": 0,
-#          "ipv4Count": 0
-#        }
-#      }
+        required: true
+      payload:
+        title: List of destinations
+        description: Payload object with destinations used to create
+        type: '[]string'
+        required: true
+
+    output:
+
+
 
 triggers:
 #TODO
