[MC-702] Fix Typo Squatter plugin

--- a/plugins/typo_squatter/Makefile
+++ b/plugins/typo_squatter/Makefile
@@ -1,5 +1,5 @@
 # Include other Makefiles for improved functionality
-INCLUDE_DIR = ../../tools/Makefiles
+INCLUDE_DIR = ../tools/Makefiles
 MAKEFILES := $(wildcard $(INCLUDE_DIR)/*.mk)
 # We can't guarantee customers will have the include files
 # - prefix to ignore Makefiles when not present
