--- a/plugins/typo_squatter/plugin.spec.yaml
+++ b/plugins/typo_squatter/plugin.spec.yaml
@@ -4,7 +4,7 @@ products: [insightconnect]
 name: typo_squatter
 title: Typo Squatter
 description: Detect cybersquatting of domains to aid in phishing investigation and analysis
-version: 1.0.1
+version: 1.0.2
 vendor: rapid7
 support: community
 status: []
@@ -17,7 +17,7 @@ tags:
 - squat
 hub_tags:
   use_cases: [threat_detection_and_response, data_enrichment]
-  keywords: [dns, typo, squat]
+  keywords: [dns]
   features: []
 triggers:
   search_certstream:
@@ -29,17 +29,20 @@ triggers:
         description: Query to match
         type: string
         required: false
+        example: example
       domain:
         title: Domain
         description: Domain to check
         type: string
-        default: google.com
+        default: example.com
         required: false
+        example: example.com
       levenshtein:
         title: Levenshtein
         description: Levenshtein distance from domain score to match
         type: number
         required: false
+        example: 2
     output:
       score:
         title: Score
@@ -59,13 +62,15 @@ actions:
       domain:
         description: Domain to check
         type: string
-        default: google.com
+        default: example.com
         required: true
+        example: example.com
       flag:
         title: Flag
         description: Flag to pass for dnstwist (Advanced)
         type: string
         required: false
+        example: --geoip
     output:
       potential_squatters:
         title: Potential Squatters
@@ -74,15 +79,15 @@ actions:
         required: false
   score_domain:
     title: Score Domain
-    description: 'Get phishing score for domain. score > 90: Very Suspicous, > 65
-      likely phising'
+    description: 'Get phishing score for domain. score > 90: very suspicious, > 65 likely phishing'
     input:
       domain:
         title: Domain
         description: Domain to check
         type: string
-        default: google.com
+        default: example.com
         required: true
+        example: example.com
     output:
       score:
         title: Score
