--- a/plugins/typo_squatter/plugin.spec.yaml
+++ b/plugins/typo_squatter/plugin.spec.yaml
@@ -79,7 +79,7 @@ actions:
         required: false
   score_domain:
     title: Score Domain
-    description: 'Get phishing score for domain. score > 90: very suspicious, > 65 likely phishing'
+    description: Get phishing score for a domain. Scores over 65 should be considered likely phishing attempts with scores over 90 being very suspicious
     input:
       domain:
         title: Domain
